--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html lang="en">
+<meta name=“viewport” content=“width=device-width, initial-scale=1">
+
 
 <head>
   <title>Changing font colors</title>
