--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
-<meta name=“viewport” content=“width=device-width, initial-scale=1">
-
 
 <head>
   <title>Changing font colors</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
